[package]
authors = ["Coleman McFarland <coleman.mcfarland@gmail.com>"]
autobins = false
license = "MIT"
name = "fitbit-syncd"
version = "0.1.0"


[dependencies]
bincode = "*"
chrono = "0.4"
clap = "2.31"
failure = "0.1.1"
oauth2 = "1.3"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sled = "*"
tiny_http = "0.6"
toml = "*"
url = "1.7"
keyz = { git = "https://github.com/anxiousmodernman/keyz", branch = "master" }

[dependencies.fitbit]
path = "../fitbit-grabber-rs"

